@@ -3,6 +3,8 @@
           returns a list of all the metadata values
         Add store->list_metadata_names, which will tell you all the
           different metadata types (names)
+        write_node: return the version of the node that was just committed,
+        if successful
 
 0.76    13 July 2008
         Really add missing prereq of DBI!
